# quimera

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  PLAN_APP_CORE_REFACTOR.md  PLAN_RENDERER_PROTOCOL.md  PLAN_STDIN_INJECTION.md  PLAN_UI_SPLIT.md  README.md  mkdocs.yml  pyproject.toml  quimera.py  quimera.sh  quimera_context.md  requirements.txt  test_stream_rule.py  test_strip_ansi.py
data/: tasks.db
docs/: index.md  quimera-avaliacao-e-roadmap.md
quimera/: __init__.py  agent_events.py  agents.py  app.py  bugs.py  cli.py  clipboard_support.py  config.py  connection_configurator.py  constants.py  context.py  delegate_presenter.py  editor.py  env_config.py  execution_mode_presenter.py  handoff_presenter.py  memory_selector.py  metrics.py  modes.py  paths.py  process_factory.py  prompt.md  prompt.py  prompt_budget.py  prompt_kinds.py  prompt_templates.py  session_summary.py  shared_state.py  shared_state_presenter.py  spy_output_presenter.py  storage.py  task_prompt.md  task_reviewer_prompt.md  themes.py  ui.py  version.py  workspace.py  workspace_memory.py
tests/: conftest.py  legacy_app_adapters.py  routes_test.json  test_agent_call_service.py  test_agent_capabilities.py  test_agent_run_events.py  test_agents.py  test_anti_self_review.py  test_app_core_characterization.py  test_app_dispatch.py  test_app_handlers.py  test_app_history.py  test_app_inputs.py  test_app_plugin_registry.py  test_app_profile_registry.py  test_app_prompt_input.py  test_app_system_layer.py  test_approval_integration.py  test_approval_serial_cancel.py  test_bootstrap_wiring.py  test_bugs.py  test_chat_round.py  test_cli_branches.py  test_cli_expand_patterns.py  test_cli_interactive_startup.py  test_clipboard_support.py  test_completion_dropdown.py  test_config.py  test_connection_configurator.py  test_context_manager.py  test_core_mcp_first_fixes.py  test_core_rate_limit_backoff.py  test_delegate_http_async.py  test_dependency_composition.py  test_env_config.py  test_event_sink.py  test_extra_body.py  (+82 more)
(+265 files in other folders)
