[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quimera"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "rich>=14.0",
    "prompt-toolkit>=3.0",
]

[project.optional-dependencies]
ollama = ["openai>=1.0"]
api = ["openai>=1.0"]
docs = ["mkdocs>=1.6"]

[project.scripts]
quimera = "quimera.cli:main"

[tool.setuptools.packages.find]
include = ["quimera*"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning:rich",
]
norecursedirs = ["tmp"]
