[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "quimera"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "rich>=14.0",
    "textual>=0.86",
    "openai>=1.0",
]

[project.optional-dependencies]
docs = ["mkdocs>=1.6"]
browser = ["playwright>=1.50"]

[project.scripts]
quimera = "quimera.cli:main"
quimera-fake = "quimera.devtools.fake_agents:main"

[tool.setuptools.packages.find]
include = ["quimera*"]

[tool.setuptools_scm]
fallback_version = "0.1.0"
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning:rich",
]
norecursedirs = ["tmp", ".claude"]
